plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'com.demoInventario'
version = '1.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.hibernate:hibernate-core:6.2.7.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'com.mysql:mysql-connector-j:8.0.33'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
}

application {
    mainClass = 'com.demoInventario.app.Main'
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

run {
    jvmArgs = [
            '--module-path', 'C:/Program Files/Java/javafx-sdk-21/lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}